--- a/package.json
+++ b/package.json
@@ -2,25 +2,42 @@
   "name": "",
   "version": "0.1.0",
   "private": true,
+  "author": "Danial Khakbaz<danialkhakbaz.dk@gmail.com>",
+  "description": "",
+  "keywords": [],
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "eslint": "eslint --fix .",
+    "fix": "prettier --write .",
+    "upgrade": "yarn upgrade-interactive --latest",
+    "knip": "npx knip",
+    "check-prettier": "prettier . --check",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.0.4"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.4"
+    "eslint-config-next": "15.0.4",
+    "eslint-plugin-boundaries": "^5.0.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-project-structure": "^3.11.0",
+    "husky": "^8.0.0",
+    "next-view-transitions": "^0.3.4",
+    "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "sharp": "^0.33.5",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
