(fix): Fix some command in the package.json file

--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "",
   "version": "0.1.0",
   "private": true,
-  "author": "Danial Khakbaz<danialkhakbaz.dk@gmail.com>",
+  "author": "",
   "description": "",
   "keywords": [],
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "eslint": "eslint --fix .",
+    "lint": "eslint --fix .",
     "fix": "prettier --write .",
     "upgrade": "yarn upgrade-interactive --latest",
     "knip": "npx knip",
